include/zonvie_hbft.h

#pragma once
#include <stddef.h>
#include <stdint.h>

#ifdef __cplusplus
extern "C" {
#endif

// Opaque handle that owns FreeType + HarfBuzz objects.
typedef struct zonvie_ft_hb_font zonvie_ft_hb_font;

// OpenType feature descriptor for HarfBuzz shaping.
typedef struct zonvie_font_feature {
    char tag[4];    // 4-char OpenType tag (e.g. "liga", "ss01")
    int32_t value;  // 0=disable, 1=enable, N=specific value (signed for slnt axis)
} zonvie_font_feature;

#define ZONVIE_MAX_FONT_FEATURES 32

// face_index is the TTC/collection face index (CoreText kCTFontIndexAttribute).
zonvie_ft_hb_font* zonvie_ft_hb_font_create(const uint8_t* font_bytes, size_t font_len, uint32_t pixel_size, uint32_t face_index);
// Borrowed variant: font_bytes must remain valid until destroy. Used by the
// macOS fallback cache with a retained mmap-backed NSData to avoid a second
// full-font allocation/copy inside the C bridge.
zonvie_ft_hb_font* zonvie_ft_hb_font_create_borrowed(const uint8_t* font_bytes, size_t font_len, uint32_t pixel_size, uint32_t face_index);
void zonvie_ft_hb_font_destroy(zonvie_ft_hb_font* f);

// Set OpenType features for HarfBuzz shaping.
// Stored on the font handle and applied to all subsequent hb_shape() calls.
// count must be <= ZONVIE_MAX_FONT_FEATURES; excess features are silently ignored.
// count=0 clears all features (restores HarfBuzz defaults).
void zonvie_ft_hb_font_set_features(zonvie_ft_hb_font* f, const zonvie_font_feature* features, size_t count);

// Apply font variation axes (wght, wdth, opsz, etc.) from the fvar table.
// Each entry's tag is matched against the font's available axes; non-axis tags
// are silently ignored. Values are interpreted as design-space coordinates
// (e.g. wght=700, wdth=100, opsz=24) and clamped to each axis's range.
// Rebuilds the ASCII tables for the new instance with the current features.
// count=0 resets all axes to their default values.
// Safe to call on non-variable fonts (no-op if fvar is absent).
void zonvie_ft_hb_font_set_variations(zonvie_ft_hb_font* f, const zonvie_font_feature* variations, size_t count);

// A variation axis value that may be fractional: a CoreText instance's
// coordinates (Skia's wght runs 0.48-3.2, Recursive's CASL 0-1) lose their
// meaning when rounded to the integers zonvie_font_feature carries.
typedef struct zonvie_font_axis {
    char tag[4];
    float value;
} zonvie_font_axis;

// zonvie_ft_hb_font_set_variations with fractional values.
void zonvie_ft_hb_font_set_variation_axes(zonvie_ft_hb_font* f, const zonvie_font_axis* axes, size_t count);

// Shape UTF-32 scalars.
// Outputs are HarfBuzz position values in 26.6 fixed-point pixels (1px = 64).
// Returns glyph_count written to outputs (<= out_cap). If out_cap is too small, returns needed count.
size_t zonvie_hb_shape_utf32(
    zonvie_ft_hb_font* f,
    const uint32_t* scalars,
    size_t scalar_count,
    uint32_t* out_glyph_ids,
    uint32_t* out_clusters,      // NEW: hb_glyph_info_t.cluster (input index)
    int32_t* out_x_advance,
    int32_t* out_y_advance,
    int32_t* out_x_offset,
    int32_t* out_y_offset,
    size_t out_cap,
    int32_t* out_font_ascender,
    int32_t* out_font_descender,
    int32_t* out_font_height
);

// Render a glyph to an 8-bit grayscale bitmap (FT_RENDER_MODE_NORMAL).
// The returned buffer pointer is valid until the next render call on the same font handle.
int zonvie_ft_render_glyph(
    zonvie_ft_hb_font* f,
    uint32_t glyph_id,
    const uint8_t** out_buffer,
    int* out_width,
    int* out_height,
    int* out_pitch,
    int* out_left,
    int* out_top,
    int32_t* out_advance_x_26_6
);

// Render a glyph with color support (FT_LOAD_COLOR).
// For color glyphs (emoji), produces BGRA bitmap (bytes_per_pixel=4).
// For non-color glyphs, falls back to grayscale (bytes_per_pixel=1).
// The returned buffer pointer is valid until the next render call on the same font handle.
int zonvie_ft_render_glyph_color(
    zonvie_ft_hb_font* f,
    uint32_t glyph_id,
    const uint8_t** out_buffer,
    int* out_width,
    int* out_height,
    int* out_pitch,
    int* out_left,
    int* out_top,
    int32_t* out_advance_x_26_6,
    int* out_bytes_per_pixel
);

// ASCII fast path: retrieve pre-computed tables for codepoints 0-127.
// Returns 1 if tables are valid, 0 if not. Caller provides [128]-element buffers.
int zonvie_ft_hb_get_ascii_glyph_ids(zonvie_ft_hb_font* f, uint32_t* out_glyph_ids);
int zonvie_ft_hb_get_ascii_x_advances(zonvie_ft_hb_font* f, int32_t* out_x_advances);
int zonvie_ft_hb_get_ascii_lig_triggers(zonvie_ft_hb_font* f, uint8_t* out_lig_triggers);

#ifdef __cplusplus
}
#endif